// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Applies the correct default styles 1`] = `
<button
  class="sc-aXZVg egkSUg"
>
  Click Me
</button>
`;

exports[`Button component Applies the correct styles when disabled 1`] = `
<button
  class="sc-aXZVg egkSUg"
  disabled=""
>
  Click Me
</button>
`;

exports[`Button component Applies the correct styles when selected 1`] = `
<button
  class="sc-aXZVg hdPvyL"
>
  Click Me
</button>
`;
